# GLTest

./: CMakeLists.txt  GLTest.pro  Makefile  glviewer.cpp  glviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_glviewer.cpp  pclviewer.cpp  pclviewer.h  ui_mainwindow.h
scans/: testScan.ply
